kubernetes/cluster/media/lidarr/lidarr.yaml
# Service: Lidarr
# Ingress: lidarr.brhd.io
# Label: app.kubernetes.io/name: lidarr
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
  labels:
    app.kubernetes.io/name: lidarr
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8686
  selector:
    app.kubernetes.io/name: lidarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app.kubernetes.io/name: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: media
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      restartPolicy: Always
      containers:
        - name: lidarr
          image: ghcr.io/hotio/lidarr:release-3.1.0.4875
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 1000Mi
              cpu: 1000m
          ports:
            - containerPort: 8686
          startupProbe:
            httpGet:
              path: /ping
              port: 8686
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 8686
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: 8686
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
